--- a/style.css
+++ b/style.css
@@ -251,7 +251,7 @@ iframe {
     border-color: red;
     border-width: 10px;
     border-radius: 50px;
-    width: 60%;
+    height: 80%;
     margin-left: auto;
     margin-right: auto;
 }
