--- a/style.css
+++ b/style.css
@@ -251,7 +251,6 @@ iframe {
     border-color: red;
     border-width: 10px;
     border-radius: 50px;
-    height: 80%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -260,6 +259,7 @@ iframe {
 .carrousel {
     display: flex;
     align-items: center;
+    max-height: 80%;
 }
 
 .unslide-img {
