--- a/style.css
+++ b/style.css
@@ -251,6 +251,7 @@ iframe {
     border-color: red;
     border-width: 10px;
     border-radius: 50px;
+    height: 80%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -259,7 +260,6 @@ iframe {
 .carrousel {
     display: flex;
     align-items: center;
-    max-height: 80%;
 }
 
 .unslide-img {
